# CVPlayground

./: CMakeLists.txt  CVLib.cpp  CVLib.h  CannyEdge.cpp  CannyEdge.hpp  CornerDetection.kdev4  Corners.cpp  Corners.hpp  Filter.cpp  Filter.hpp  Gradient.cpp  Gradient.hpp  HarrisCorners.cpp  HarrisCorners.hpp  Helper.cpp  Helper.hpp  HoughLines.cpp  HoughLines.hpp  LICENSE.md  PlaygroundOpenCV.kdev4  README  main.cpp
inc/: Filter.hpp  Gradient.hpp  Helper.hpp
